Super puper styles2

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             &copy; 2026 Passat Garage Project. Всі права захищені.
         </div>
     </footer>
-
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 <style>
 
